<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_move_up"
          android:icon="@drawable/ic_menu_move_up"
          android:title="@string/menu_move_up"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_move_down"
          android:icon="@drawable/ic_menu_move_down"
          android:title="@string/menu_move_down"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_mark_complete"
          android:icon="@drawable/ic_menu_mark"
          android:title="@string/complete"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_mark_incomplete"
          android:icon="@drawable/ic_menu_mark"
          android:title="@string/incomplete"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_delete"
          android:icon="@drawable/ic_menu_trash_holo_light"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_undelete"
          android:icon="@drawable/ic_menu_trash_holo_light"
          android:title="@string/menu_undelete"
          android:showAsAction="ifRoom" />

</menu>