<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_menu_add_field_holo_light"
          android:title="@string/menu_insert"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_menu_search_holo_light"
          android:title="@string/menu_search"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/action_view_settings"
          android:icon="@drawable/ic_menu_view"
          android:title="@string/menu_view_settings"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_preferences"
          android:icon="@drawable/ic_menu_settings_holo_light"
          android:title="@string/menu_preferences"
          android:showAsAction="never" />
    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_menu_help_holo_light"
          android:title="@string/menu_help"
          android:showAsAction="never" />
</menu>