<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add_task"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/menu_insert"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/menu_search"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/action_preferences"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_preferences"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_help"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/menu_help"
          android:showAsAction="ifRoom" />
</menu>